# cli

./: README.md  pyproject.toml  setup.py
cli/: main.py  requirements.txt  utils.py
data/: test_file.csv
