[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Basic CLI project template that supports modules and command arguments"
authors = ["Matt Chmielewski <43832628+emskiphoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
