[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Basic CLI project template that supports modules and command arguments"
authors = ["Matt Chmielewski <43832628+emskiphoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "cli.main:main"
# note that Poetry installs will recognize this as the entry point for the package
# but setuptools and others do not.  The current solution is to offer a setup.py for 
# installs that don't use Poetry

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
